# speedtestTrial

./: LICENSE  Makefile.in  README.md  autogen.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.1
include/: Makefile.am  http.h  speedtest.h  util.h
recipes-speedtest/: lcm-speedtest.bb
recipes-speedtest/lcm-speedtest/: speedtestd.default  speedtestd.init
speedtest/: Makefile  Makefile.am  README.md  config.h.in
speedtest/autom4te.cache/: requests  traces.0
speedtest/include/: Makefile  Makefile.in  http.h
speedtest/recipes-speedtest/: lcm-speedtest.bb
speedtest/src/: Makefile  Makefile.am  speedtest.c  util.c
src/: Makefile.am  Makefile.in  http.c  main.c  util.c
